Fixed overlapping issue

--- a/frontend/components/user-post/UserPost.module.scss
+++ b/frontend/components/user-post/UserPost.module.scss
@@ -83,6 +83,7 @@
 .skeleton {
     @extend .container;
     height: 139px;
+    max-width: 100%;
 }
 .skeleton-flex {
     display: flex;
@@ -104,7 +105,6 @@
 .skeleton-content {
     @extend .skeleton-text;
     width: 500px;
-    max-width: 100%;
 }
 .skeleton-footer {
     @extend .skeleton-footer;
@@ -116,4 +116,10 @@
     @extend .skeleton-text;
     width: 90px;
     height: 23px;
+}
+
+@media (max-width: 600px) {
+    .skeleton-content {
+        width: 100%;
+    }
 }
